--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 .container {
     position: relative; 
     display: inline-block;
@@ -9,6 +13,7 @@
     width: 100%; 
     justify-content: center; 
     align-items: center;
+    padding: 20px;
 }
 
 .player-hp,
