Update enemy hp interface on hit.
Make a blue bg div on top of yellow bg div to indicate current hp,
staying relative to container div.
Make enemy healthbar reduce on hit.

--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,15 @@
     width: 100%;
 }
 
+#enemy-bar {
+    position: absolute; 
+    background-color: blue; 
+    top: 0; 
+    right: 0; 
+    left: 0; 
+    bottom: 0;
+}
+
 .timer {
     background-color: red; 
     width: 100px; 
