--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,18 @@
     padding: 20px;
 }
 
+.player,
+.enemy {
+    position: relative; 
+    height: 30px; 
+    width: 100%;
+}
+
+.player {
+    display: flex;
+    justify-content: flex-end;
+}
+
 .player-hp,
 .enemy-hp {
     background-color: yellow; 
@@ -23,14 +35,24 @@
     width: 100%;
 }
 
+#player-bar,
 #enemy-bar {
     position: absolute; 
     background-color: blue; 
     top: 0; 
     right: 0; 
-    left: 0; 
     bottom: 0;
 }
+
+#enemy-bar {
+    left: 0;
+}
+
+#player-bar {
+    width: 100%;
+}
+
+
 
 .timer {
     background-color: red; 
