--- a/styles.css
+++ b/styles.css
@@ -59,4 +59,7 @@
     width: 100px; 
     height: 100px; 
     flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
